--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="callout large primary">
       <div class="row column text-center">
-        <h1>Our Blog</h1>
+        <h1>Konnor Knight's Website</h1>
       </div>
     </div>
 
